<resources>
    <string name="app_name">Sanskrit Keyboard Test</string>

    <string name="keyboard_name">Sanskrit-IAST Keyboard</string>

    <!-- 0 1 2 3 4 5 6 7 8 9 -->
    <string name="key_label_digit_0">0</string>
    <string name="key_label_digit_1">1</string>
    <string name="key_label_digit_2">2</string>
    <string name="key_label_digit_3">3</string>
    <string name="key_label_digit_4">4</string>
    <string name="key_label_digit_5">5</string>
    <string name="key_label_digit_6">6</string>
    <string name="key_label_digit_7">7</string>
    <string name="key_label_digit_8">8</string>
    <string name="key_label_digit_9">9</string>

    <!-- q w e r t y u i o p -->
    <string name="key_label_letter_q">q</string>
    <string name="key_label_letter_w">w</string>
    <string name="key_label_letter_e">e</string>
    <string name="key_label_letter_r">r</string>
    <string name="key_label_letter_t">t</string>
    <string name="key_label_letter_y">y</string>
    <string name="key_label_letter_u">u</string>
    <string name="key_label_letter_i">i</string>
    <string name="key_label_letter_o">o</string>
    <string name="key_label_letter_p">p</string>

    <!-- a s d f g h j k l -->
    <string name="key_label_letter_a">a</string>
    <string name="key_label_letter_s">s</string>
    <string name="key_label_letter_d">d</string>
    <string name="key_label_letter_f">f</string>
    <string name="key_label_letter_g">g</string>
    <string name="key_label_letter_h">h</string>
    <string name="key_label_letter_j">j</string>
    <string name="key_label_letter_k">k</string>
    <string name="key_label_letter_l">l</string>

    <!-- z x c v b n m -->
    <string name="key_label_letter_z">z</string>
    <string name="key_label_letter_x">x</string>
    <string name="key_label_letter_c">c</string>
    <string name="key_label_letter_v">v</string>
    <string name="key_label_letter_b">b</string>
    <string name="key_label_letter_n">n</string>
    <string name="key_label_letter_m">m</string>

    <!-- <space> ° . , ? ! - @ | -->
    <string name="key_label_space">\Space</string>
    <string name="key_label_placeholder">°</string>
    <string name="key_label_period">.</string>
    <string name="key_label_comma">,</string>
    <string name="key_label_question_mark">\?</string>
    <string name="key_label_exclamation_mark">!</string>
    <string name="key_label_hyphen">-</string>
    <string name="key_label_at">\@</string>
    <string name="key_label_sep">|</string>
    <string name="key_label_left_apostrophe">`</string>

    <!-- : ; $ / # -->
    <string name="key_label_full_colon">:</string>
    <string name="key_label_semi_colon">;</string>
    <string name="key_label_dollar">$</string>
    <string name="key_label_slash">/</string>
    <string name="key_label_backslash">\\</string>
    <string name="key_label_hash">#</string>

    <!-- ā ī ū ṛ ṝ ḷ ḹ ṭ ḍ ṅ ñ ṇ ś ṣ ṃ ḥ -->
    <string name="key_label_iast_long_a">\u0101</string>
    <string name="key_label_iast_long_i">\u012B</string>
    <string name="key_label_iast_long_u">\u016B</string>
    <string name="key_label_iast_r">\u1E5B</string>
    <string name="key_label_iast_long_r">\u1E5D</string>
    <string name="key_label_iast_l">\u1E37</string>
    <string name="key_label_iast_long_l">\u1E39</string>
    <string name="key_label_iast_t">\u1E6D</string>
    <string name="key_label_iast_d">\u1E0D</string>
    <string name="key_label_iast_n1">\u1E45</string>
    <string name="key_label_iast_n2">\u00F1</string>
    <string name="key_label_iast_n3">\u1E47</string>
    <string name="key_label_iast_s1">\u015B</string>
    <string name="key_label_iast_s2">\u1E63</string>
    <string name="key_label_iast_m">\u1E43</string>
    <string name="key_label_iast_h">\u1E25</string>

    <!-- १ २ ३ ४ ५ ६ ७ ८ ९ ० -->
    <string name="key_label_sa_digit_1">\u0967</string>
    <string name="key_label_sa_digit_2">\u0968</string>
    <string name="key_label_sa_digit_3">\u0969</string>
    <string name="key_label_sa_digit_4">\u096A</string>
    <string name="key_label_sa_digit_5">\u096B</string>
    <string name="key_label_sa_digit_6">\u096C</string>
    <string name="key_label_sa_digit_7">\u096D</string>
    <string name="key_label_sa_digit_8">\u096E</string>
    <string name="key_label_sa_digit_9">\u096F</string>
    <string name="key_label_sa_digit_0">\u0966</string>

    <!-- अ आ  इ ई  उ ऊ  ऋ ॠ  ऌ ॡ  ए ऐ  ओ औ ह -->
    <string name="key_label_sa_letter_a">\u0905</string>
    <string name="key_label_sa_letter_long_a">\u0906</string>
    <string name="key_label_sa_letter_i">\u0907</string>
    <string name="key_label_sa_letter_long_i">\u0908</string>
    <string name="key_label_sa_letter_u">\u0909</string>
    <string name="key_label_sa_letter_long_u">\u090A</string>
    <string name="key_label_sa_letter_ri">\u090B</string>
    <string name="key_label_sa_letter_long_ri">\u960</string>
    <string name="key_label_sa_letter_li">\u090C</string>
    <string name="key_label_sa_letter_long_lri">\u0961</string>
    <string name="key_label_sa_letter_e">\u090F</string>
    <string name="key_label_sa_letter_ai">\u0910</string>
    <string name="key_label_sa_letter_o">\u0913</string>
    <string name="key_label_sa_letter_au">\u0914</string>
    <string name="key_label_sa_letter_h">\u0939</string>

    <!-- ् ऽ । ॥ -->
    <string name="key_label_sa_red">\u094D</string>
    <string name="key_label_sa_apostrophe">\u093D</string>
    <string name="key_label_sa_sep">\u0964</string>
    <string name="key_label_sa_double_sep">\u0965</string>

    <!-- क ख ग घ च छ ज झ ट ठ -->
    <string name="key_label_sa_letter_ka">\u0915</string>
    <string name="key_label_sa_letter_kha">\u0916</string>
    <string name="key_label_sa_letter_ga">\u0917</string>
    <string name="key_label_sa_letter_gha">\u0918</string>
    <string name="key_label_sa_letter_ca">\u091A</string>
    <string name="key_label_sa_letter_cha">\u091B</string>
    <string name="key_label_sa_letter_ja">\u091C</string>
    <string name="key_label_sa_letter_jha">\u091D</string>
    <string name="key_label_sa_letter_ta2">\u091F</string>
    <string name="key_label_sa_letter_tha2">\u0920</string>

    <!-- ड ढ त थ द ध प फ ब भ -->
    <string name="key_label_sa_letter_da2">\u0921</string>
    <string name="key_label_sa_letter_dha2">\u0922</string>
    <string name="key_label_sa_letter_ta">\u0924</string>
    <string name="key_label_sa_letter_tha">\u0925</string>
    <string name="key_label_sa_letter_da">\u0926</string>
    <string name="key_label_sa_letter_dha">\u0927</string>
    <string name="key_label_sa_letter_pa">\u092A</string>
    <string name="key_label_sa_letter_pha">\u092B</string>
    <string name="key_label_sa_letter_ba">\u092C</string>
    <string name="key_label_sa_letter_bha">\u092D</string>

    <!-- ङ ञ ण न म श ष स -->
    <string name="key_label_sa_letter_na1">\u0919</string>
    <string name="key_label_sa_letter_na2">\u091E</string>
    <string name="key_label_sa_letter_na3">\u0923</string>
    <string name="key_label_sa_letter_na4">\u0928</string>
    <string name="key_label_sa_letter_ma">\u092E</string>
    <string name="key_label_sa_letter_sa1">\u0936</string>
    <string name="key_label_sa_letter_sa2">\u0937</string>
    <string name="key_label_sa_letter_sa3">\u0938</string>

    <!-- य र ल व -->
    <string name="key_label_sa_letter_ya">\u092F</string>
    <string name="key_label_sa_letter_ra">\u0930</string>
    <string name="key_label_sa_letter_la">\u0932</string>
    <string name="key_label_sa_letter_va">\u0935</string>

    <!--  ् ऀ ँ ं ः ा ि ी ु ू -->
    <string name="key_label_sa_extra_red">\u094D</string>
    <string name="key_label_sa_extra_omkara1">\u0900</string>
    <string name="key_label_sa_extra_omkara2">\u0901</string>
    <string name="key_label_sa_extra_anushvara">\u0902</string>
    <string name="key_label_sa_extra_visarga">\u0903</string>
    <string name="key_label_sa_extra_a_long">\u093E</string>
    <string name="key_label_sa_extra_i_short">\u093F</string>
    <string name="key_label_sa_extra_i_long">\u0940</string>
    <string name="key_label_sa_extra_u_short">\u0941</string>
    <string name="key_label_sa_extra_u_long">\u0942</string>

    <!-- ृ ॄ ॢ ॣ े ै ो ौ ॑ ॒ -->
    <string name="key_label_sa_extra_ri">\u0943</string>
    <string name="key_label_sa_extra_ri_long">\u0944</string>
    <string name="key_label_sa_extra_lri">\u0962</string>
    <string name="key_label_sa_extra_lri_long">\u0963</string>
    <string name="key_label_sa_extra_e">\u0947</string>
    <string name="key_label_sa_extra_ai">\u0948</string>
    <string name="key_label_sa_extra_o">\u094B</string>
    <string name="key_label_sa_extra_au">\u094C</string>
    <string name="key_label_sa_extra_accent1">\u0951</string>
    <string name="key_label_sa_extra_accent2">\u0952</string>

    <!-- ॐ(om) (misc) -->
    <string name="key_label_sa_om">\u950</string>
    <string name="lang_label_sa">संस्कृतम्</string>
    <string name="lang_label_qwerty">Qwerty</string>
    <string name="key_label_apostrophe">\'</string>
    <string name="key_label_punctuation">\' - ?</string>
    <string name="key_label_parenthesis">( )</string>
    <string name="key_label_symbols_qwerty">+ *</string>
    <string name="key_action_description">Action key</string>
    <string name="key_shift_description">Shift key</string>
    <string name="key_backspace_description">Backspace key</string>
    <string name="key_swap_to_digits_content_descr">Swap to digits</string>

    <!-- ^ ~ % ( ) [ ] { } + - & " ÷ = * > < ° _ -->
    <string name="key_label_circumflex_accent">^</string>
    <string name="key_label_tilda">~</string>
    <string name="key_label_percent">%</string>
    <string name="key_label_open_parenthesis">(</string>
    <string name="key_label_closed_parenthesis">)</string>
    <string name="key_label_open_square_brace">[</string>
    <string name="key_label_closed_square_brace">]</string>
    <string name="key_label_open_curly_brace">{</string>
    <string name="key_label_closed_curly_brace">}</string>
    <string name="key_label_plus">+</string>
    <string name="key_label_minus">-</string>
    <string name="key_label_ampersand"><![CDATA[&]]></string>
    <string name="key_label_quotes">\"</string>
    <string name="key_label_division">÷</string>
    <string name="key_label_equal">=</string>
    <string name="key_label_star">*</string>
    <string name="key_label_gt"><![CDATA[>]]></string>
    <string name="key_label_lt"><![CDATA[<]]></string>
    <string name="key_label_degree">°</string>
    <string name="key_label_underscore">_</string>

    <!-- other -->
    <string name="key_label_pound">..</string>
    <string name="key_label_cent">..</string>
    <string name="key_label_euro">..</string>
    <string name="key_label_spanish_exclamation">..</string>
    <string name="key_label_spanish_interrogation">..</string>

    <!-- ă  -->
    <string name="key_label_romania_a1">\u0103</string>
    <string name="key_label_romania_a2">\u00E2</string>
    <string name="key_label_romania_i1">\u00EE</string>
    <string name="key_label_romania_t">\u021B</string>
    <string name="key_label_romania_s">\u0219</string>

    <string name="key_ttnya">&#2340;&#2381;&#2340;&#2381;&#2351;</string>

</resources>
