<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key1"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_1"
        app:label="@string/key_label_sa_digit_1"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key2"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_2"
        app:label="@string/key_label_sa_digit_2"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key3"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_3"
        app:label="@string/key_label_sa_digit_3"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key4"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_4"
        app:label="@string/key_label_sa_digit_4"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key5"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_5"
        app:label="@string/key_label_sa_digit_5"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key6"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_6"
        app:label="@string/key_label_sa_digit_6"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key7"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_7"
        app:label="@string/key_label_sa_digit_7"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key8"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_8"
        app:label="@string/key_label_sa_digit_8"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key9"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_9"
        app:label="@string/key_label_sa_digit_9"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

    <com.lvicto.skeyboard.view.key.ExtraKeyView
        android:id="@+id/key0"
        style="@style/KeyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/key_label_sa_digit_0"
        app:label="@string/key_label_sa_digit_0"
        app:backgroundNormal="@drawable/key_normal"
        app:backgroundPressed="@drawable/key_pressed"/>

</LinearLayout>